--- a/private-metadata/js/web/src/index.html.ejs
+++ b/private-metadata/js/web/src/index.html.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello React!</title>
+        <title>Janus</title>
     </head>
     <body>
         <div id="root"></div>
