Split app-bar and layout

--- a/private-metadata/js/web/src/styles/colors.less
+++ b/private-metadata/js/web/src/styles/colors.less
@@ -16,7 +16,7 @@
 @mobile-xs-max: 520px;
 @mobile-xs-min: 521px;
 
-@bg-color: @black-100;
+@bg-color: #000000;
 @subtext-color: #c7c6c5;
 @accent-color: #ffffff;
 
