--- a/private-metadata/js/web/src/styles/fonts.less
+++ b/private-metadata/js/web/src/styles/fonts.less
@@ -13,6 +13,13 @@
 @assetPrefix: '';
 
 @font-face {
+  font-family: 'Montserrat';
+  src: url("@{assetPrefix}/font/Montserrat-Thin.ttf");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'GraphikWeb';
   src: url("@{assetPrefix}/font/Graphik-SuperItalic-Web.woff2") format('woff2'),
     url("@{assetPrefix}/font/Graphik-SuperItalic-Web.woff") format('woff');
