--- a/private-metadata/js/web/src/styles/index.less
+++ b/private-metadata/js/web/src/styles/index.less
@@ -4,7 +4,9 @@
 @import './fonts.less';
 @import './defaults.less';
 
+@import '../components/AppBar/index.less';
 @import '../components/CurrentUserBadge/index.less';
+@import '../components/Layout/index.less';
 @import '../components/MetaplexModal/index.less';
 
 @import '../contexts/WalletContext/wallet.less';
