UI labels and tweaks

--- a/private-metadata/js/web/src/styles/defaults.less
+++ b/private-metadata/js/web/src/styles/defaults.less
@@ -313,3 +313,39 @@ p {
     color: #FFFFFF;
   }
 }
+
+.stack > * {
+  margin-bottom: 30px;
+}
+
+.action-field {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+
+  .field-title {
+    text-align: left;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    color: rgba(255, 255, 255, 0.7);
+
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 0;
+    margin-bottom: 12px;
+  }
+
+  .field-info {
+    text-align: left;
+
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 12px;
+  }
+
+  margin-bottom: 30px;
+}
