Spike chunk transfer initiation from web

--- a/private-metadata/js/web/src/styles/defaults.less
+++ b/private-metadata/js/web/src/styles/defaults.less
@@ -323,6 +323,15 @@ p {
   flex-direction: column;
   text-align: left;
 
+  > input {
+    border-radius: 8px;
+  }
+
+  > textarea {
+    border-radius: 8px;
+    resize: none,
+  }
+
   .field-title {
     text-align: left;
     font-style: normal;
