Add loading screen wrapper

--- a/private-metadata/js/web/src/styles/index.less
+++ b/private-metadata/js/web/src/styles/index.less
@@ -7,6 +7,7 @@
 @import '../components/AppBar/index.less';
 @import '../components/CurrentUserBadge/index.less';
 @import '../components/Layout/index.less';
+@import '../components/Loader/index.less';
 @import '../components/MetaplexModal/index.less';
 
 @import '../contexts/WalletContext/wallet.less';
