Move buffers into additional options

--- a/private-metadata/js/web/src/styles/defaults.less
+++ b/private-metadata/js/web/src/styles/defaults.less
@@ -318,6 +318,16 @@ p {
   margin-bottom: 30px;
 }
 
+#transfer-options-collapse {
+  .ant-collapse-header {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .ant-collapse-item-active .ant-collapse-header {
+    padding-bottom: 20px;
+  }
+}
+
 .action-field {
   display: flex;
   flex-direction: column;
