Move transfer input fields into modal and unify styling
- visually cluttered to display by default

--- a/private-metadata/js/web/src/styles/defaults.less
+++ b/private-metadata/js/web/src/styles/defaults.less
@@ -321,7 +321,7 @@ p {
 #transfer-options-collapse {
   .ant-collapse-header {
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 20px;
   }
   .ant-collapse-item-active .ant-collapse-header {
     padding-bottom: 20px;
@@ -346,8 +346,8 @@ p {
     text-align: left;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 15px;
+    line-height: 18px;
     display: flex;
     align-items: center;
     color: rgba(255, 255, 255, 0.7);
@@ -356,7 +356,7 @@ p {
     order: 0;
     align-self: stretch;
     flex-grow: 0;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
   }
 
   .field-info {
@@ -366,7 +366,7 @@ p {
     margin-bottom: 12px;
   }
 
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .fullAspectRatio > img {
